--- a/tutorials/templates/pending_student_bookings.html
+++ b/tutorials/templates/pending_student_bookings.html
@@ -1,7 +1,7 @@
 {% extends 'base_content.html' %}
 
 {% block content %}
-<h2>Pending Bookings for Approval</h2>
+<h2>Pending Bookings for Your Approval</h2>
 
 {% if pending_bookings %}
     <ul>
@@ -10,6 +10,8 @@
                 <strong>Tutor:</strong> {{ booking.tutor.user.full_name }} <br>
                 <strong>Language:</strong> {{ booking.language.name }} <br>
                 <strong>Term:</strong> {{ booking.term.name }} <br>
+                <strong>Day:</strong> {{ booking.day_of_week }} <br>
+                <strong>Time:</strong> {{ booking.start_time }} <br>
                 <strong>Status:</strong> {{ booking.status }} <br>
 
                 <!-- Approve/Reject Buttons -->
