--- a/tutorials/templates/tutor_dashboard.html
+++ b/tutorials/templates/tutor_dashboard.html
@@ -1,35 +1,12 @@
-<!-- templates/tutorials/tutor_dashboard.html -->
-{% extends 'base.html' %}
+{% extends "base_content.html" %}
 
 {% block content %}
-<h2>Your Scheduled Lessons</h2>
-
-{% if lessons %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Start Time</th>
-                <th>Duration</th>
-                <th>Student</th>
-                <th>Language</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for lesson in lessons %}
-                <tr>
-                    <td>{{ lesson.date }}</td>
-                    <td>{{ lesson.start_time }}</td>
-                    <td>{{ lesson.duration }}</td>
-                    <td>{{ lesson.booking.student.full_name }}</td>
-                    <td>{{ lesson.booking.language.name }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-{% else %}
-    <p>No lessons scheduled.</p>
-{% endif %}
-
-<a href="{% url 'dashboard' %}" class="btn btn-secondary mt-3">Back to Dashboard</a>
+<div class="container">
+  <h1>Tutor Dashboard</h1>
+  <p>Welcome, {{ user.first_name }}! This is your tutor dashboard.</p>
+  
+  <div class="mt-4">
+    <a href="{% url 'view_tutor_bookings' %}" class="btn btn-primary btn-lg">View Your Bookings</a>
+  </div>
+</div>
 {% endblock %}
