--- a/tutorials/templates/view_tutor_bookings.html
+++ b/tutorials/templates/view_tutor_bookings.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div class="container">
   <h1>Your Bookings</h1>
-  <p>Below are your current bookings:</p>
+  <p>Below are the bookings made by students for your sessions:</p>
 
   <table class="table">
     <thead>
       <tr>
         <th>#</th>
-        <th>Tutor</th>
+        <th>Student</th>
         <th>Date</th>
         <th>Time</th>
         <th>Subject</th>
@@ -19,14 +19,14 @@
       {% for booking in bookings %}
       <tr>
         <td>{{ forloop.counter }}</td>
-        <td>{{ booking.tutor }}</td>
+        <td>{{ booking.student }}</td>
         <td>{{ booking.date }}</td>
         <td>{{ booking.time }}</td>
         <td>{{ booking.subject }}</td>
       </tr>
       {% empty %}
       <tr>
-        <td colspan="5">You have no bookings at the moment.</td>
+        <td colspan="5">No bookings found.</td>
       </tr>
       {% endfor %}
     </tbody>
