--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -1,4 +1,3 @@
-<!-- tutorials/templates/tutorials/dashboard.html -->
 {% extends 'base_content.html' %}
 
 {% block content %}
@@ -14,7 +13,7 @@
         {% elif user.is_tutor %}
             <!-- Tutor-Specific Links -->
             <li><a href="{% url 'tutor_profile' %}">Update Teaching Languages</a></li>
-            <li><a href="{% url 'dashboard' %}">View Scheduled Lessons</a></li>
+            <li><a href="{% url 'view_bookings' %}">View Scheduled Lessons</a></li>
         {% else %}
             <!-- Student-Specific Links -->
             <li><a href="{% url 'create_booking' %}">Request a Booking</a></li>
