--- a/tutorials/templates/view_tutor_bookings.html
+++ b/tutorials/templates/view_tutor_bookings.html
@@ -1,35 +1,46 @@
 {% extends "base_content.html" %}
 
 {% block content %}
-<div class="container">
-  <h1>Your Bookings</h1>
-  <p>Below are the bookings made by students for your sessions:</p>
-
-  <table class="table">
+<!-- Bookings as Tutor -->
+<h3>Bookings as Tutor</h3>
+<table class="table">
     <thead>
-      <tr>
-        <th>#</th>
-        <th>Student</th>
-        <th>Date</th>
-        <th>Time</th>
-        <th>Subject</th>
-      </tr>
+        <tr>
+            <th>ID</th>
+            <th>Student</th>
+            <th>Language</th>
+            <th>Term</th>
+            <th>Day</th>
+            <th>Time</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
     </thead>
     <tbody>
-      {% for booking in bookings %}
-      <tr>
-        <td>{{ forloop.counter }}</td>
-        <td>{{ booking.student }}</td>
-        <td>{{ booking.date }}</td>
-        <td>{{ booking.time }}</td>
-        <td>{{ booking.subject }}</td>
-      </tr>
-      {% empty %}
-      <tr>
-        <td colspan="5">No bookings found.</td>
-      </tr>
-      {% endfor %}
+        {% for booking in tutor_bookings %}
+            <tr>
+                <td>{{ booking.id }}</td>
+                <td>{{ booking.student.full_name }}</td>
+                <td>{{ booking.language.name }}</td>
+                <td>{{ booking.term.name }}</td>
+                <td>{{ booking.day_of_week }}</td>
+                <td>{{ booking.start_time }}</td>
+                <td>{{ booking.status }}</td>
+                <td>
+                    {% if booking.tutor == user.tutor and booking.tutor_approval == 'Pending' %}
+                        <a href="{% url 'accept_booking' booking.id %}" class="btn btn-success btn-sm">Accept</a>
+                        <a href="{% url 'reject_booking' booking.id %}" class="btn btn-danger btn-sm">Reject</a>
+                    {% elif booking.tutor == user.tutor %}
+                        <span>{{ booking.tutor_approval }}</span>
+                    {% endif %}
+                </td>
+            </tr>
+        {% empty %}
+            <tr>
+                <td colspan="8">No bookings as tutor.</td>
+            </tr>
+        {% endfor %}
     </tbody>
-  </table>
-</div>
+</table>
+
 {% endblock %}
