--- a/tutorials/templates/tutor_profile.html
+++ b/tutorials/templates/tutor_profile.html
@@ -1,19 +1,22 @@
-<!-- templates/tutorials/tutor_profile.html -->
-{% extends 'base.html' %}
+<!-- templates/tutor_profile.html -->
+
+{% extends 'base_content.html' %}
 
 {% block content %}
-<h2>Update Teaching Languages</h2>
-
-<form method="post">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    <div class="form-group">
-        {{ form.languages.label_tag }}
-        {{ form.languages }}
-        {{ form.languages.errors }}
-    </div>
-    <button type="submit" class="btn btn-primary">Update Languages</button>
-</form>
-
-<a href="{% url 'dashboard' %}" class="btn btn-secondary mt-3">Back to Dashboard</a>
+    <h2>Update Teaching Profile</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+        <div class="form-group">
+            {{ form.languages.label_tag }}
+            {{ form.languages }}
+            {{ form.languages.errors }}
+        </div>
+        <div class="form-group">
+            {{ form.specializations.label_tag }}
+            {{ form.specializations }}
+            {{ form.specializations.errors }}
+        </div>
+        <button type="submit" class="btn btn-success">Save</button>
+    </form>
 {% endblock %}
