--- a/static/custom.css
+++ b/static/custom.css
@@ -1,115 +1,34 @@
-/*
- * Alerts
- */
-
-.alert {
-  border-radius: 0px;
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f8f9fa;
+  color: #343a40;
 }
 
-
-/*
- * Cover page
- */
-
-.content {
-  padding-top: 10px;
+h1, h2 {
+  font-weight: bold;
+  color: #007bff;
 }
 
-.h-100 {
-  min-height: 100vh;
-  height: 100vh;
+.navbar {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.vcenter-item{
-    display: flex;
-    align-items: center;
+.navbar-brand {
+  font-weight: bold;
+  color: #007bff !important;
 }
 
-/*
- * Cover page
- */
-h1.cover-heading {
-  font-size: 4rem;
+.btn {
+  font-weight: 500;
+  border-radius: 5px;
 }
 
-p.cover-text {
-  font-size: 1.7rem;
+footer {
+  background-color: #f1f1f1;
+  color: #6c757d;
+  font-size: 0.9rem;
 }
 
-.cover-card {
-  background-color: rgba(245, 245, 245, 0.6);
-  max-width: 30rem;
-  padding-top: 30px;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 30px;
-  border-radius: 15%;
-}
-.cover-card-block {
-  opacity: 1
-}
-
-
-/*
- * forms
- */
-.nolabel label {
-  display: none;
-}
-
-ul.errorlist {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-/*
- * Typefaces
- */
-
-.low-key {
-  color: #777777;
-  font-weight: 300;
-}
-
-.list-title {
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
-
-/*
- * Profile
- */
-.profile-image {
-  width: 120px;
-  clear:both;
-  float:left;
-}
-
-.profile-text {
-  overflow:hidden;
-  padding-left:20px
-}
-
-h3.profile-title {
-  margin-bottom: 0px;
-}
-
-.profile-username {
-  color: #777777;
-  font-weight: 300;
-  font-style: italic;
-}
-
-
-/*
- * Hyperlinks
- */
-.content a {
-  text-decoration: none;
-  color: #0d6efd;
-}
-.content a:hover {
-  text-decoration: underline;
-  color: #0d6efd;
+.container {
+  max-width: 960px;
 }
