--- a/tutorials/templates/home.html
+++ b/tutorials/templates/home.html
@@ -1,23 +1,18 @@
-{% extends 'base.html' %}
-{% block body %}
-  <div class="container vh-100">
-    <div class="row h-100">
-      <div class="col-12 my-auto">
-        <div class="card cover-card offset-sm-2 offset-md-4 offset-lg-7">
-          <h1 class="cover-heading">Task Manager</h1>
-          <p class="cover-text">A task manager application by Team <i>Insert team name here (or revise this home screen as you see fit)</i></p>
-          <p>
-            <a href='{% url 'sign_up' %}' class="btn btn-lg btn-secondary">
-              Sign up
-            </a>
-          </p>
-          <p>
-            <a href='{% url 'log_in' %}' class="btn btn-lg btn-secondary">
-              Log in
-            </a>
-          </p>
-        </div>
-      </div>
+{% load static %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'custom.css' %}" rel="stylesheet">
+    <title>Code Tutors</title>
+  </head>
+  <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
+    <div class="text-center">
+      <h1 class="mb-4">Code Tutors</h1>
+      <a href="{% url 'log_in' %}" class="btn btn-primary btn-lg mx-2">Log In</a>
+      <a href="{% url 'sign_up' %}" class="btn btn-secondary btn-lg mx-2">Sign Up</a>
     </div>
-  </div>
-{% endblock %}
+  </body>
+</html>
