--- a/tutorials/templates/profile.html
+++ b/tutorials/templates/profile.html
@@ -1,15 +1,16 @@
-{% extends 'base_content.html' %}
+{% extends "base.html" %}
+{% block title %}Profile{% endblock %}
+
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Edit profile</h1>
-      <form action="{% url 'profile' %}" method="post">
-        {% csrf_token %}
-        {% include 'partials/bootstrap_form.html' with form=form %}
-        <input type="submit" value="Update" class="btn btn-primary">
-      </form>
-    </div>
-  </div>
+<div class="container mt-4">
+  <h2 class="mb-4">Your Profile</h2>
+  
+  <!-- Profile Details -->
+  <p><strong>Username:</strong> {{ user.username }}</p>
+  <p><strong>Name:</strong> {{ user.first_name }} {{ user.last_name }}</p>
+  <p><strong>Email:</strong> {{ user.email }}</p>
+
+  <!-- Links -->
+  <a href="{% url 'change_password' %}" class="btn btn-primary mt-3">Change Password</a>
 </div>
 {% endblock %}
