--- a/tutorials/templates/tutor_dashboard.html
+++ b/tutorials/templates/tutor_dashboard.html
@@ -1,12 +1,14 @@
-{% extends "base_content.html" %}
+{% extends "base.html" %}
+{% block title %}Tutor Dashboard{% endblock %}
 
 {% block content %}
-<div class="container">
-  <h1>Tutor Dashboard</h1>
-  <p>Welcome, {{ user.first_name }}! This is your tutor dashboard.</p>
-  
-  <div class="mt-4">
-    <a href="{% url 'view_tutor_bookings' %}" class="btn btn-primary btn-lg">View Your Bookings</a>
+<h2 class="mb-4">Welcome, Tutor!</h2>
+<div class="row">
+  <div class="col-md-6">
+    <a href="{% url 'change_language' %}" class="btn btn-primary btn-lg w-100 mb-3">Change Teaching Language</a>
+  </div>
+  <div class="col-md-6">
+    <a href="{% url 'view_bookings' %}" class="btn btn-secondary btn-lg w-100 mb-3">View Bookings</a>
   </div>
 </div>
 {% endblock %}
