--- a/tutorials/templates/home.html
+++ b/tutorials/templates/home.html
@@ -1,23 +1,14 @@
-{% extends 'base.html' %}
-{% block body %}
-  <div class="container vh-100">
-    <div class="row h-100">
-      <div class="col-12 my-auto">
-        <div class="card cover-card offset-sm-2 offset-md-4 offset-lg-7">
-          <h1 class="cover-heading">Task Manager</h1>
-          <p class="cover-text">A task manager application by Team <i>Insert team name here (or revise this home screen as you see fit)</i></p>
-          <p>
-            <a href='{% url 'sign_up' %}' class="btn btn-lg btn-secondary">
-              Sign up
-            </a>
-          </p>
-          <p>
-            <a href='{% url 'log_in' %}' class="btn btn-lg btn-secondary">
-              Log in
-            </a>
-          </p>
-        </div>
-      </div>
+<!-- templates/home.html -->
+{% extends 'base_content.html' %}
+
+{% block title %}Home{% endblock %}
+{% block content %}
+  <div class="text-center">
+    <h1 class="display-4">Welcome to Task Manager</h1>
+    <p class="lead">Manage your tutoring sessions effortlessly.</p>
+    <div class="mt-4">
+      <a href="{% url 'sign_up' %}" class="btn btn-primary btn-lg me-2">Sign Up</a>
+      <a href="{% url 'log_in' %}" class="btn btn-secondary btn-lg">Log In</a>
     </div>
   </div>
 {% endblock %}
