--- a/tutorials/templates/partials/bootstrap_form.html
+++ b/tutorials/templates/partials/bootstrap_form.html
@@ -1,21 +1,13 @@
-{% load widget_tweaks %}
+<!-- templates/partials/bootstrap_form.html -->
 {% for field in form %}
   <div class="mb-3">
-    {{ field.label_tag }}
-    {% if form.is_bound %}
-      {% if field.errors %}
-        {% render_field field class="form-control is-invalid" %}
-      {% else %}
-        {% render_field field class="form-control is-valid" %}
-      {% endif %}
-    {% else %}
-      {% render_field field class="form-control" %}
+    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+    {{ field }}
+    {% if field.help_text %}
+      <div class="form-text">{{ field.help_text }}</div>
     {% endif %}
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-    <div class="invalid-feedback">
-      {{ field.errors }}
-    </div>
+    {% for error in field.errors %}
+      <div class="text-danger">{{ error }}</div>
+    {% endfor %}
   </div>
 {% endfor %}
