--- a/tutorials/templates/partials/messages.html
+++ b/tutorials/templates/partials/messages.html
@@ -1,13 +1,11 @@
+<!-- templates/partials/messages.html -->
 {% if messages %}
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        {% for message in messages %}
-          <div class="alert alert-{{ message.level_tag }}" role="alert">
-            {{ message }}
-          </div>
-        {% endfor %}
+  <div class="mt-3">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
-    </div>
+    {% endfor %}
   </div>
 {% endif %}
