--- a/tutorials/templates/partials/navbar.html
+++ b/tutorials/templates/partials/navbar.html
@@ -1,13 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-  <div class="container">
-    <a class="navbar-brand" href="{% url 'dashboard' %}">
-      Task Manager
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!-- templates/partials/navbar.html -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'home' %}">Task Manager</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    {% if user.is_authenticated %}
-      {% include 'partials/menu.html' %}
-    {% endif %}
+    <div class="collapse navbar-collapse" id="navbarNav">
+      {% if user.is_authenticated %}
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+          </li>
+          {% if user.is_staff %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'admin_pending_bookings' %}">Manage Bookings</a>
+            </li>
+          {% elif user.account_type == 'tutor' %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'tutor_profile' %}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'view_bookings' %}">Bookings</a>
+            </li>
+          {% elif user.account_type == 'student' %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'create_booking' %}">Request Booking</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'view_bookings' %}">My Bookings</a>
+            </li>
+          {% endif %}
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'log_out' %}">Log Out</a>
+          </li>
+        </ul>
+      {% else %}
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'log_in' %}">Log In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'sign_up' %}">Sign Up</a>
+          </li>
+        </ul>
+      {% endif %}
+    </div>
   </div>
 </nav>
