--- a/tutorials/templates/sign_up.html
+++ b/tutorials/templates/sign_up.html
@@ -1,15 +1,21 @@
+<!-- templates/sign_up.html -->
 {% extends 'base_content.html' %}
+
+{% block title %}Sign Up{% endblock %}
+
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Sign up</h1>
-      <form action="{% url 'sign_up' %}" method="post">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h2>Sign Up</h2>
+      <form method="post" novalidate>
         {% csrf_token %}
+        
+        <!-- Render the form using the bootstrap_form partial -->
         {% include 'partials/bootstrap_form.html' with form=form %}
-        <input type="submit" value="Sign up" class="btn btn-primary">
+        
+        <button type="submit" class="btn btn-success">Register</button>
+        <a href="{% url 'home' %}" class="btn btn-link">Cancel</a>
       </form>
     </div>
   </div>
-</div>
 {% endblock %}
